--- a/dashboard/public/report.html
+++ b/dashboard/public/report.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>AI Productivity Report</title>
+  <title>User Productivity Report</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
   <style>
