--- a/dashboard/public/user.html
+++ b/dashboard/public/user.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Captured Photos</title>
+  <title>PC Users</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
   <style>
